--- a/requirements.txt
+++ b/requirements.txt
@@ -22,8 +22,8 @@ fastapi
 uvicorn
 jinja2
 python-multipart
-accelerate ==1.3.0
+accelarate
 scikit-learn
-umap-learn == 0.5.7
-tqdm == 4.67.1
+umap-learn
+tqdm
 -e .
